name:                  hsDealWithCSV
version:               1.0.0.0
-- synopsis:
description:           deal with CSV data
-- bug-reports:
license:               GPL-3
license-file:          LICENSE
author:                Alexander Diemand
maintainer:            codieplusplus@apax.net
copyright:             2020 Alexander Diemand
category:              Statistics
cabal-version:         >=1.10
build-type:            Simple
extra-source-files:    README.md

library
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  hs-source-dirs:      src
  exposed-modules:     DwCSV.CSV
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.13 && <4.14,
                       text

test-suite tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  hs-source-dirs:      test
  main-is:             Tests.hs
  other-modules:       DwCSV.Tests.Basic
  build-depends:       base,
                       hsDealWithCSV,
                       tasty,
                       tasty-hunit,
                       tasty-quickcheck

